--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-source-filesystem": "^1.5.39",
     "gatsby-transformer-json": "^1.0.20",
     "gatsby-transformer-remark": "^1.7.44",
+    "har-validator": "^5.1.3",
     "lunr": "^2.3.1",
     "lunr-languages": "^1.0.0",
     "mark.js": "^8.11.1",
